* Added simple inventory tracking system accessible from the items screen.
* Using horizontal bar chart for items and customers graphical reports.
* Added summary discount report (and graphical version)
* Can now bulk turn on if an item is serialized or has an alternate description
* Items can be filtered by "Low Inventory", "Serial Number" and "No Description"
* Website doesn't have to start with http:// in config section.
* Added 2 new reports, Low Inventory and Inventory Summary
* Added warning message if quanity will fall below 0 to sales interface
* Updated missing language keys (in english, but they can easily be fixed)
* Made headings in report listings page stand out more