@@ -1,4 +1,5 @@
 * Added simple inventory tracking system accessible from the items screen.
+* Timezone Support
 * Using horizontal bar chart for items and customers graphical reports.
 * Added summary discount report (and graphical version)
 * Can now bulk turn on if an item is serialized or has an alternate description
